--- a/water-electricity-data-handler-parent/pom.xml
+++ b/water-electricity-data-handler-parent/pom.xml
@@ -8,9 +8,18 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
+    <profiles>
+        <profile>
+            <id>MainMavenProfile</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+        </profile>
+    </profiles>
+
     <repositories>
         <repository>
-            <id>AppacheMavenCentral</id>
+            <id>central</id>
             <url>http://repo1.maven.org/maven/</url>
         </repository>
     </repositories>
@@ -81,6 +90,7 @@
     </dependencies>
 
     <build>
+
         <pluginManagement>
             <plugins>
                 <plugin>
@@ -143,5 +153,7 @@
                 </executions>
             </plugin>
         </plugins>
+
     </build>
+
 </project>
