Правка багов рефакторинга

--- a/water-electricity-data-handler-parent/pom.xml
+++ b/water-electricity-data-handler-parent/pom.xml
@@ -59,7 +59,7 @@
                 <version>${commons-net.version}</version>
             </dependency>
             <dependency>
-                <groupId>org.projectlombok</groupId>Lf
+                <groupId>org.projectlombok</groupId>
                 <artifactId>lombok</artifactId>
                 <version>${lombok.version}</version>
             </dependency>
