--- a/water-electricity-data-handler-parent/src/main/resources/ftp.properties
+++ b/water-electricity-data-handler-parent/src/main/resources/ftp.properties
@@ -1,5 +1,5 @@
-host="pin.cheby.ru"
-folder="./Data"
-login="user3"
-password="Qq123456
+host=pin.cheby.ru
+folder=./Data
+login=user3
+password=Qq123456
 port=21
